fixed - IMAP and SMTP hosts for external mail clients - alignment issue

--- a/styles/desktop/settings.less
+++ b/styles/desktop/settings.less
@@ -11,7 +11,7 @@
 	margin-bottom: 16px;
 }
 
-.panels.settings .fieldset.fieldset_external_access_servers {
+.panels.settings .tabs_container .fieldset.fieldset_external_access_servers {
 	border-color: #d8d7d7;
 	margin: 0;
 	padding: 0 20px;
